aula 12 html parte 1

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -36,6 +36,12 @@
                             <img src="../assets/img/snorlax.jpeg" alt="Pokemon Snorlax" width="200px">
                         </div>
                     </li>
+                    <li>
+                        <div>
+                            <strong>#3 Gengar</strong>
+                            <img src="https://img.pokemondb.net/artwork/gengar.jpg" alt="Pokemon Gengar" width="200px">
+                        </div>
+                    </li>
                 </ul>
 
             </main>
