aula 12 html parte 2

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
-
+<!-- nodemon -e js,html.css index.js    // serve para escutar estes arquivos pelo nodemon-->
 <html>
 
     <head>
         <meta charset="utf-8">
         <title> Meus Pokemons </title>
+        <link rel="stylesheet" href="../styles/index.css" >
 
     </head>
 
     <body>
         <header>
 
-            <h1>PokeAPI</h1>
+            <h1 class="titulo">PokeAPI</h1> 
             <div>
-                <img src="https://img.pokemondb.net/design/header2018z-lg.png" alt="Database de Imagens Pokemon" width="600px">
+                <img src="https://img.pokemondb.net/boxes/sun.jpg" alt="Foto de Perfil"/>
 
             <span>Minha Conta</span>
             </div>
+        </header>
         
             <main>
                 <div>
@@ -51,9 +53,6 @@
                     Desenvolvido por Paulo Moreira.
                 </span>
             </footer>
-
-        </header>
-
 
     </body>
 
