aula 12 html parte 3 final

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -21,30 +21,27 @@
         </header>
         
             <main>
-                <div>
-                    <input type="text" placeholder="Seu pineco vai aqui">
+                <div id="pesquisa">
+                    <input type="text" placeholder="Digite Seu Pokémon">
                 </div>
 
-                <ul type="none">
-                    <li>
-                        <div>
+                <div class="lista">
+                        <div class="pokemon">
                             <strong>#1 Scyther</strong>
                             <img src="../assets/img/scyther.jpeg" alt="Pokemon Scyther" width="200px">
                         </div>
-                    </li>
-                    <li>
-                        <div>
+
+                        <div class="pokemon">
                             <strong>#2 Snorlax</strong>
                             <img src="../assets/img/snorlax.jpeg" alt="Pokemon Snorlax" width="200px">
                         </div>
-                    </li>
-                    <li>
-                        <div>
+
+                        <div class="pokemon">
                             <strong>#3 Gengar</strong>
                             <img src="https://img.pokemondb.net/artwork/gengar.jpg" alt="Pokemon Gengar" width="200px">
                         </div>
-                    </li>
-                </ul>
+                </div>
+
 
             </main>
 
