--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -25,3 +25,40 @@ header > div {
     justify-content: center;
 
 }
+
+#pesquisa {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+
+}
+
+#pesquisa > input {
+    border-radius: 4px;
+    border: 0px;
+    background-color: rgba(0,0,0,0.8);
+    color: #ffffff;
+    padding: 5px;
+    text-align: center;
+}
+
+/* width: 200px; border-radius: 24px; border: 1px solid #dfe1e5; padding: 5px */
+
+.pokemon {
+    display: flex;
+    flex-direction: column;
+    border: 2px solid black;
+    margin: 5px;
+    padding: 10px;
+    align-items: center;
+}
+
+.lista {
+    display: flex;
+    flex-direction: row;
+}
+
+.pokemon > strong{
+    margin-bottom: 10px;
+}
