--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -18,6 +18,18 @@ header {
 
 }
 
+textarea{
+    resize: none;
+}
+
+.form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
 header > div {
     display: flex;
     flex-direction: column;
@@ -34,14 +46,24 @@ header > div {
 
 }
 
-#pesquisa > input {
+.styled-input {
     border-radius: 4px;
     border: 0px;
     background-color: rgba(0,0,0,0.8);
     color: #ffffff;
-    padding: 5px;
+    padding: 5px 8px;
+    outline: none;
     text-align: center;
+    width: 200px;
 }
+
+/* .styled-input {
+    width: 200px; 
+    border-radius: 24px; 
+    border: 1px solid #c5c7cc; 
+    padding: 5px 8px;
+    outline: none;
+} */
 
 /* width: 200px; border-radius: 24px; border: 1px solid #dfe1e5; padding: 5px */
 
